# CrossAndroidIosStruct

./: .project  AndroidManifest.xml  README.md  预处理  预编译
1-jniMultithread/: MyThreadActivity.java  readme.txt
1-jniMultithread/jni/: Android.mk  JNI_Thread.c
2-jniSimple/: MainActivity.java  readme.txt
2-jniSimple/jni/: Android.mk  Application.mk  bgc_aes.cpp  bgc_aes.h  main.cpp  sdes.cpp  sdes.h
3-psp/jni/: app-android.cpp
4-ndkWithCMake/testCmakeElf/: CMakeLists.txt  Readme.txt  buildRunOnAndroidMake.bat  buildRunOnAndroidNinja.bat  main.cpp
4-ndkWithCMake/testLibsDemo/app/: CMakeLists.txt  hello-libs.cpp
4-ndkWithCMake/testLibsDemo/gen-libs/: CMakeLists.txt
4-ndkWithCMake/testLibsDemo/gen-libs/gmath/: CMakeLists.txt
4-ndkWithCMake/testLibsDemo/gen-libs/gmath/src/: gmath.c
4-ndkWithCMake/testLibsDemo/gen-libs/gperf/: CMakeLists.txt
4-ndkWithCMake/testLibsDemo/gen-libs/gperf/src/: gperf.c
jni/: Android.mk  Application.mk
jni/src/: main.cpp
jni/src/core/fc/: fc_core.cpp
jni/src/core/nds/: nds_core.cpp
jni/src/core/ps/: ps_core.cpp
jni/src/emulator/: EmuInterface.h  Emulator.cpp  Emulator.h
jni/src/engine/: AndroidEngine.cpp  AndroidEngine.h  EmulatorEngine.cpp  EmulatorEngine.h  EngineFactory.cpp  EngineFactory.h  FCEngine.cpp  FCEngine.h  NDSEngine.cpp  NDSEngine.h  PSEngine.cpp  PSEngine.h  fc.h  nds.h  ps.h
res/values/: strings.xml
src/com/wf/crossstruct/: MainActivity.java  Second.java
